--- a/package.json
+++ b/package.json
@@ -11,18 +11,23 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "body-scroll-lock": "^4.0.0-beta.0",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "nanoid": "^5.0.9",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
+    "react-icons": "^5.4.0",
     "react-loader-spinner": "^6.1.6",
     "react-modal": "^3.16.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@types/body-scroll-lock": "^3.1.2",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@types/react-modal": "^3.16.3",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.0.0",
